--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,88 @@
- .env.*
- node_modules
- dist
- generated-types
- .DS_Store
- .env
- .env.dev
- .env.prod
- .env.test
- .env.local
- .env.development
+# 依赖目录
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 构建输出
+dist/
+build/
+*.tsbuildinfo
+
+# 环境变量和配置文件
+.env*
+!.env.example
+env/
+config/local.*
+config/production.*
+config/development.*
+
+# 数据库相关
+*.db
+*.sqlite
+*.sqlite3
+database/
+db/
+
+# 日志文件
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# 运行时文件
+.pids
+*.pid
+*.seed
+*.pid.lock
+
+# 覆盖率目录
+coverage/
+.nyc_output/
+
+# 临时文件
+.tmp/
+.temp/
+*.tmp
+*.temp
+
+# IDE 和编辑器
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# 操作系统
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# 测试生成的文件
+test-generated/
+generated-types/
+
+# 密钥和证书
+*.pem
+*.key
+*.crt
+*.p12
+*.pfx
+secrets/
+keys/
+
+# 缓存
+.cache/
+.parcel-cache/
+.next/
+.nuxt/
+
+# 其他敏感文件
+*.bak
+*.backup
+*.old
